--- a/calendar/calendar.scss
+++ b/calendar/calendar.scss
@@ -2,15 +2,107 @@
   padding: 0;
   margin: 0;
 }
-#box {
+body {
+  font-family: -apple-system-font,"Helvetica Neue","PingFang SC","Hiragino Sans GB","Microsoft YaHei",sans-serif;
+}
+
+@font-face {
+  font-family: 'iconfont';  /* project id 278590 */
+  src: url('//at.alicdn.com/t/font_a7nv1y3id33xflxr.eot');
+  src: url('//at.alicdn.com/t/font_a7nv1y3id33xflxr.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_a7nv1y3id33xflxr.woff') format('woff'),
+  url('//at.alicdn.com/t/font_a7nv1y3id33xflxr.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_a7nv1y3id33xflxr.svg#iconfont') format('svg');
+}
+
+#targetContainer {
+  width: 100%;
+  overflow: hidden;
+}
+
+.calendar-title {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  overflow: hidden;
+  span {
+    position: absolute;
+    display: inline-block;
+    height: 50px;
+    font-family: 'iconfont';
+    color: #555;
+    font-size: 16px;
+    line-height: 50px;
+  }
+  .calendar-title-left {
+    left: 30px;
+  }
+  .calendar-title-right {
+    right: 30px;
+  }
+  b {
+    font-size: 18px;
+  }
+}
+
+.calendar-box {
   position: relative;
   width: 500%;
   height: 450px;
-}
-.item {
-  display: inline-block;
-  width: 20%;
-  height: 450px;
-  float: left;
-  box-sizing: border-box;
+  .calendar-item {
+    display: inline-block;
+    width: 20%;
+    height: 300px;
+    float: left;
+    box-sizing: border-box;
+    .calendar-item-title {
+      width: 100%;
+      height: 40px;
+      span {
+        display: inline-block;
+        width: 14.28%;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        color: #555;
+        float: left;
+        box-sizing: border-box;
+      }
+    }
+    .calendar-item-body {
+      list-style-type: none;
+      li {
+        display: inline-block;
+        width: 14.28%;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        color: #0a0a0a;
+        float: left;
+        box-sizing: border-box;
+        i {
+          display: inline-block;
+          font-style: normal;
+          width: 32px;
+          height: 32px;
+          line-height: 32px;
+          border-radius: 50%;
+        }
+        &.disabled {
+          color: #aaa;
+        }
+      }
+    }
+  }
+  .calendar-item0 {
+     background: #85D64D;
+  }
+  .calendar-item1 {
+     background: #abcdef;
+  }
+  .calendar-item2 {
+     background: #FF8877
+  }
 }
