绑定了基本事件

--- a/calendar/calendar.scss
+++ b/calendar/calendar.scss
@@ -96,13 +96,22 @@ body {
       }
     }
   }
-  .calendar-item0 {
-     background: #85D64D;
-  }
-  .calendar-item1 {
-     background: #abcdef;
-  }
-  .calendar-item2 {
-     background: #FF8877
-  }
+}
+
+
+
+.calendar-item0 {
+  background: #85D64D;
+}
+.calendar-item1 {
+  background: #abcdef;
+}
+.calendar-item2 {
+  background: #FF8877
+}
+.able1 {
+    background: rgba(255,255,255,.8);
+}
+.able2 {
+    background: rgba(255,0,255,.8);
 }
