--- a/calendar/calendar.scss
+++ b/calendar/calendar.scss
@@ -149,7 +149,7 @@ $dateHeight : 40px;
           line-height: 32px;
           border-radius: 50%;
         }
-        &.disabled {
+        &.calendar-disabled {
           color: #aaa;
         }
       }
